# check-car-plates-telegram-bot

./: Cargo.toml
src/: lib.rs  main.rs
