[package]
name = "check-car-plates-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["redis-storage", "macros", "ctrlc_handler"] }
thiserror = "1"
anyhow = "1"
regex = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
serde_json = "1"
log = "0.4"
pretty_env_logger = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
redis = "0.20"